<resources>
    <string name="app_name">ScanProspecta</string>

    <string name="register">Register</string>
    <string name="fullname">Full Name</string>
    <string name="input_fullname">Enter your full name</string>
    <string name="email">Email Address</string>
    <string name="input_email">Enter your email</string>
    <string name="create_password">Create Password</string>
    <string name="create_account">Create Account</string>
    <string name="valid_email">Please input a valid email</string>
    <string name="email_cannot_empty">Email cannot be empty</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="have_account">Dont have an account?</string>

    <string name="get_started">Get Started</string>
    <string name="onboarding_1">Welcome to\nScanProspecta!</string>
    <string name="onboarding_2">Match Your CV with\nYour Dream Position</string>
    <string name="onboarding_3">Attain Your Matching\nPercentage</string>
    <string name="or">or</string>

    <string name="title_home">Home</string>
    <string name="title_example">Example</string>
    <string name="title_consultation">Consultation</string>
    <string name="title_profile">Profile</string>

    <string name="searchbar_hint">Search...</string>
    <string name="welcome_back">Welcome back,</string>
    <string name="name">Name</string>
    <string name="history">History</string>
    <string name="percentage">90%</string>
    <string name="result">Result</string>
    <string name="desc_result">This is the result of your CV\nmatching with several job positions</string>
    <string name="job_position">Job Position</string>
    <string name="resume_example">Resume Example</string>
    <string name="logout">Logout</string>
    <string name="description">Description</string>

    <string name="send_success">Sent successfully</string>
    <string name="send_error">Failed to send</string>
    <string name="confirmation_password">Confirmation Password</string>
</resources>