<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.capstone.scanprospecta.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_resume"
        android:name="com.capstone.scanprospecta.ui.resume.ResumeFragment"
        android:label="@string/title_example"
        tools:layout="@layout/fragment_resume" />

    <fragment
        android:id="@+id/navigation_consultation"
        android:name="com.capstone.scanprospecta.ui.consultation.ConsultationFragment"
        android:label="@string/title_consultation"
        tools:layout="@layout/fragment_consultation" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.capstone.scanprospecta.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>