<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.result.ResultActivity">

    <ImageView
        android:id="@+id/ivResult"
        android:layout_width="180dp"
        android:layout_height="220dp"
        android:layout_marginVertical="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <RelativeLayout
        android:id="@+id/ivBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@color/blue2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivResult"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="-36dp">

        <TextView
            android:id="@+id/tvDescResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            android:text="@string/desc_result"
            android:textAlignment="center"
            android:textColor="@color/navy"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvPercentage1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvDescResult"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/percentage"
            android:textColor="@color/navy"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvJob1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPercentage1"
            android:layout_marginStart="30dp"
            android:text="@string/job_position"
            android:textColor="@color/navy"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/tvPercentage2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvJob1"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/percentage"
            android:textColor="@color/navy"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvJob2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPercentage2"
            android:layout_marginStart="30dp"
            android:text="@string/job_position"
            android:textColor="@color/navy"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/tvPercentage3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvJob2"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/percentage"
            android:textColor="@color/navy"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvJob3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPercentage3"
            android:layout_marginStart="30dp"
            android:text="@string/job_position"
            android:textColor="@color/navy"
            android:textSize="35sp" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>